Fixed styling error on Safari.

--- a/src/components/PrivateSpace/PrivateSpace.scss
+++ b/src/components/PrivateSpace/PrivateSpace.scss
@@ -23,7 +23,6 @@
       flex-direction: column;
       position: relative;
       z-index: 1;
-      height: 100%;
       overflow: auto;
 
       @media (max-width: 730px) {
